--- a/website/templates/landing.html
+++ b/website/templates/landing.html
@@ -34,7 +34,7 @@
             <h2>
               We make expense sharing <strong>stress-free.</strong> Split costs
               between groups and track spending easier than ever before.<br /><br />Best
-              part? It's FREE. No cap.
+              part? It's FREE. No catch.
             </h2>
             <br /><br />
             <a href="signup.html" class="buttonClass">Sign Up</a>
