--- a/website/templates/see_transactions.html
+++ b/website/templates/see_transactions.html
@@ -21,7 +21,9 @@
           <td>{{ transaction.members_included }}</td>
 
           <td>{{transaction.date_created}}</td>
-          <td><a href="delete-transaction?groupID={{ group.id }}&tranID={{ transaction.id }}">Delete</a></td>
+          <td><a href="delete-transaction?groupID={{ group.id }}&tranID={{ transaction.id }}"
+            onclick="return confirm('Are you sure you want this transaction record? This action cannot be undone.')">Delete</a></td>
+          <td><a href="edit-transaction?groupID={{ group.id }}&tranID={{ transaction.id }}">Edit</a></td>
         </tr>
     {% endfor %}
     </table>
@@ -45,7 +47,9 @@
           <td>{% for member in group.members %}{% if member.id == payment.payer_id %}{{ member.username }}{% endif %}{% endfor %}</td>
           <td>{% for member in group.members %}{% if member.id == payment.recipient_id %}{{ member.username }}{% endif %}{% endfor %}</td>
           <td>{{payment.date_created}}</td>
-          <td><a href="delete-payment?groupID={{ group.id }}&paymentID={{ payment.id }}">Delete</a></td>
+          <td><a href="delete-payment?groupID={{ group.id }}&paymentID={{ payment.id }}"
+            onclick="return confirm('Are you sure you want to this payment record? This action cannot be undone.')">Delete</a></td>
+          <td><a href="edit-payment?groupID={{ group.id }}&paymentID={{ payment.id }}">Edit</a></td>
         </tr>
     {% endfor %}
     </table>
