--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -7,7 +7,7 @@
 </header>
 
 <body>
-  <div id="wrapper">
+  <div style="padding-left:20px; max-width:400px;">
     <main>
       <h1>Log In</h1>
       <form method="post">
