--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -1,35 +1,36 @@
-{% extends "base2.html" %} {% block title %}Sign Up{% endblock %} {% block content %}
+{% extends "base2.html" %} {% block title %}Sign Up{% endblock %} {% block
+content %}
 <header>
-  <a href="/"><img src="{{ url_for('static', filename='images/logo3small.png') }}"></a>
-     <div style="margin-right: 5rem; position: sticky;">
-       <a href="/login" id="signin">Log In</a>
-    </div>
- </header>
-<body>
-<div id="wrapper">
-  <main>
-    <h1>Create Account</h1>
-    <p>Required information is marked with an asterisk (*).</p>
-    <form method="post">
+  <a href="/"><img src="{{ url_for('static', filename='images/logo3small.png') }}" /></a>
+  <div style="margin-right: 5rem; position: sticky">
+    <a href="/login" id="signin">Log In</a>
+  </div>
+</header>
+<div style="padding-left:20px; max-width:400px;">
+  <body>
+    <main>
+      <h1>Create Account</h1>
+      <p>Required information is marked with an asterisk (*).</p>
+      <form method="post">
         <label for="firstname">* First Name:</label>
-        <input type="text" id="firstname" name="firstname" class="form-control" required>
+        <input type="text" id="firstname" name="firstname" class="form-control" required />
 
         <label for="email">* E-mail:</label>
-        <input type="email" id="email" name="email" class="form-control" required>
+        <input type="email" id="email" name="email" class="form-control" required />
 
         <label for="password1">* Create Password:</label>
-        <input type="password" id="password1" name="password1" class="form-control" required>
+        <input type="password" id="password1" name="password1" class="form-control" required />
 
         <label for="password2">* Confirm Password:</label>
-        <input type="password" id="password2" name="password2" class="form-control" required>
+        <input type="password" id="password2" name="password2" class="form-control" required />
 
-        <input type="submit" id="mySubmit" value="Create">
-    </form>
-  </main>
+        <input type="submit" id="mySubmit" value="Create" />
+      </form>
+    </main>
+    <footer>
+      Copyright &copy; 2022 Marmo Expense Sharing<br />
+      <a href="mailto:carsondidericksen@gmail.com">support@marmo.app</a>
+    </footer>
+  </body>
 </div>
-<footer>
-  Copyright &copy; 2022 Marmo Expense Sharing<br>
-  <a href="mailto:carsondidericksen@gmail.com">support@marmo.app</a>
-</footer>
-</body>
 {% endblock %}
