--- a/website/templates/webflow_base.html
+++ b/website/templates/webflow_base.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <meta charset="utf-8">
-        <title>{% block title %}Home{% endblock %}</title>
-        <meta content="Group" property="og:title">
-        <meta content="Group" property="twitter:title">
-        <meta content="width=device-width, initial-scale=1" name="viewport">
-        <meta content="Webflow" name="generator">
-        <link rel="stylesheet" href="{{ url_for('static', filename='webflow-secondary.css') }}" type="text/css">
-        <link rel="stylesheet" href="{{ url_for('static', filename='webflow.css') }}">
-        <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-        <script type="text/javascript">WebFont.load({  google: {    families: ["Karla:200,300,regular,500,600,700,800,200italic,300italic,italic,500italic,600italic,700italic,800italic"]  }});</script>
-        <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
-        <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-        <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.png') }}">
-      </head>
+<head>
+    <meta charset="utf-8">
+    <title>{% block title %}Home{% endblock %}</title>
+    <meta content="Group" property="og:title">
+    <meta content="Group" property="twitter:title">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta content="Webflow" name="generator">
+    <link rel="stylesheet" href="{{ url_for('static', filename='webflow-secondary.css') }}" type="text/css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='webflow.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='normalize.css') }}">
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+    <script
+        type="text/javascript">WebFont.load({ google: { families: ["Karla:200,300,regular,500,600,700,800,200italic,300italic,italic,500italic,600italic,700italic,800italic"] } });</script>
+    <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
+    <script
+        type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.png') }}">
+</head>
 
 <body>
     {% with messages = get_flashed_messages(with_categories=true) %} {% if
@@ -36,29 +39,37 @@
     </div>
     {% endif %} {% endfor %} {% endif %} {% endwith %}
 
-    {% block content %} {% endblock %}
-    {% block nav_menu %}
-    <div class="nav-menu wf-section">
-        <div class="nav-item">
-            <a href="#" class="nav-icon w-inline-block"><img
-                    src="{{ url_for('static', filename='images/chat.png') }}" loading="lazy" alt=""
-                    class="nav-image"></a>
-            <div class="nav-subtitle">Chats</div>
-        </div>
-        <div class="nav-item">
-            <a href="/" class="nav-icon w-inline-block"><img
-                    src="{{ url_for('static', filename='images/home.png') }}" loading="lazy" alt=""
-                    class="nav-image"></a>
-            <div class="nav-subtitle">Home</div>
-        </div>
-        <div class="nav-item">
-            <a href="/account" class="nav-icon w-inline-block"><img
-                    src="{{ url_for('static', filename='images/account.png') }}" loading="lazy" alt=""
-                    class="nav-image"></a>
-            <div class="nav-subtitle">Account</div>
+    <div class="body">
+        <div class="iphone">
+            {% block content %}{% endblock %}
+            {% block nav_menu %}
+            <div class="nav-menu wf-section">
+                <div class="nav-item">
+                    <a href="#" class="nav-icon w-inline-block"><img
+                            src="{{ url_for('static', filename='images/chat.png') }}" loading="lazy" alt=""
+                            class="nav-bottom-image"></a>
+                    <div class="nav-subtitle">Chats</div>
+                </div>
+                <div class="nav-item">
+                    <a href="/" class="nav-icon w-inline-block"><img
+                            src="{{ url_for('static', filename='images/home.png') }}" loading="lazy" alt=""
+                            class="nav-bottom-image"></a>
+                    <div class="nav-subtitle">Home</div>
+                </div>
+                <div class="nav-item">
+                    <a href="/account" class="nav-icon w-inline-block"><img
+                            src="{{ url_for('static', filename='images/account.png') }}" loading="lazy" alt=""
+                            class="nav-bottom-image"></a>
+                    <div class="nav-subtitle">Account</div>
+                </div>
+            </div>
+            {% endblock %}
         </div>
     </div>
-    {% endblock %}
+
+
+
+
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
